// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

module.exports = {
  a: () => {
  return {
    x:
      // comment
      "blah"
    };
  }
}

=====================================output=====================================
// @flow

module.exports = {
  a: () => {
    return {
      x:
        // comment
        "blah",
    };
  },
};

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function foo() {
  // Comment 0
  const x = {
    // Comment 1
    f: 1,
    // Comment 2
    g: 2,
    // Comment 3
    h:
    // Comment 4
      "blah",
  }
  // Comment 5
  return x;
}
module.exports = { foo };

=====================================output=====================================
// @flow

function foo() {
  // Comment 0
  const x = {
    // Comment 1
    f: 1,
    // Comment 2
    g: 2,
    // Comment 3
    h:
      // Comment 4
      "blah",
  };
  // Comment 5
  return x;
}
module.exports = { foo };

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

module.exports = {
  m() {
    return 1;
  },
};

=====================================output=====================================
// @flow

module.exports = {
  m() {
    return 1;
  },
};

================================================================================
`;
